[package]
name = "my-fungible"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
async-graphql-derive = { version = "=7.0.2", default-features = false }
linera-sdk = "0.11.3"
serde ={ version = "1.0.130", features = ["derive"] }

[dev-dependencies]
linera-sdk = { version = "0.11.3", features = ["test"] }

[[bin]]
name = "my_fungible_contract"
path = "src/contract.rs"

[[bin]]
name = "my_fungible_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
